# lib/db/src/schema/index.ts
@@ -1,3 +1,4 @@
 export * from "./affiliates";
 export * from "./clicks";
 export * from "./activity";
+export * from "./notifications";
